--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1823,7 +1823,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #3881b8;
+  background: #ffc92b;
 }
 .links-of-blogroll {
   font-size: 13px;
